k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-green
  labels:
    name: nexus-green
