k8s/nexusgreen-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexusgreen-nodeport
  namespace: nexusgreen
  labels:
    app: nexusgreen
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30001
    protocol: TCP
    name: http
  selector:
    app: nexusgreen
